Setting various security headers

--- a/container-files/etc/nginx/sites-available/live.conf
+++ b/container-files/etc/nginx/sites-available/live.conf
@@ -18,6 +18,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/stephen-cresswell.key;
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
+
     return 301 https://www.stephen-cresswell.net$request_uri;
 }
 
@@ -31,13 +32,15 @@ server {
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
+    include /etc/nginx/snippets/security.conf;
+
     location ~ /.well-known/acme-challenge {
         root /var/www/;
         allow all;
     }
 
     location / {
-        include /etc/nginx/proxy.conf;
+        include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-live:3000;
     }
 }
