--- a/container-files/etc/nginx/sites-available/local.conf
+++ b/container-files/etc/nginx/sites-available/local.conf
@@ -14,13 +14,15 @@ server {
     ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
+    include /etc/nginx/snippets/security.conf;
+
     location ~ /.well-known/acme-challenge {
         root /var/www/;
         allow all;
     }
 
     location / {
-        include /etc/nginx/proxy.conf;
+        include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-local:3000;
     }
 }
