--- a/container-files/etc/nginx/snippets/security.conf
+++ b/container-files/etc/nginx/snippets/security.conf
@@ -1,5 +1,5 @@
 add_header X-Frame-Options SAMEORIGIN;
 add_header X-Content-Type-Options nosniff;
 add_header X-XSS-Protection "1; mode=block";
-add_header Content-Security-Policy "default-src 'none'; script-src 'self' https://ssl.google-analytics.com https://www.google-analytics.com; img-src 'self' https://ssl.google-analytics.com https://www.google-analytics.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://themes.googleusercontent.com; connect-src 'self' https://www.google-analytics.com https://api.npmjs.org;";
+add_header Content-Security-Policy "default-src 'none'; script-src 'self' https://github.com/login/oauth/authorize https://ssl.google-analytics.com https://www.google-analytics.com; img-src 'self' https://github.com/login/oauth/authorize https://ssl.google-analytics.com https://www.google-analytics.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com https://themes.googleusercontent.com; connect-src 'self' https://www.google-analytics.com https://api.npmjs.org;";
 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
