Configure nginx cache

--- a/container-files/etc/nginx/sites-available/stage.conf
+++ b/container-files/etc/nginx/sites-available/stage.conf
@@ -1,3 +1,5 @@
+proxy_cache_path /etc/nginx/cache/stage levels=1:2 keys_zone=stage:10m max_size=100m use_temp_path=off;
+
 server {
     server_name stage.stephen-cresswell.net;
     listen 0.0.0.0:80;
@@ -23,6 +25,8 @@ server {
 
     location / {
         include /etc/nginx/snippets/proxy.conf;
+        proxy_cache stage;
+        include /etc/nginx/snippets/cache.conf;
         proxy_pass http://www-app-stage:3000;
     }
 }
