Fix cache config

--- a/container-files/etc/nginx/sites-available/local.conf
+++ b/container-files/etc/nginx/sites-available/local.conf
@@ -1,3 +1,5 @@
+proxy_cache_path /etc/nginx/cache/stage levels=1:2 keys_zone=stage:10m max_size=100m use_temp_path=off;
+
 server {
     server_name local.stephen-cresswell.net;
     listen 0.0.0.0:80;
@@ -22,6 +24,8 @@ server {
     }
 
     location / {
+        proxy_cache stage;
+        include /etc/nginx/snippets/cache.conf;
         include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-local:3000;
     }
