--- a/container-files/etc/nginx/snippets/cache.conf
+++ b/container-files/etc/nginx/snippets/cache.conf
@@ -1,4 +1,4 @@
 proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
 proxy_cache_lock on;
-proxy_cache_bypass $cookie_nocache $arg_nocache;
+proxy_cache_bypass $cookie_nocache $arg_nocache $arg_feature;
 add_header X-Cache-Status $upstream_cache_status;
