--- a/container-files/etc/nginx/sites-available/stage.conf
+++ b/container-files/etc/nginx/sites-available/stage.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /etc/nginx/cache/stage levels=1:2 keys_zone=stage:10m max_size=100m use_temp_path=off;
+proxy_cache_path /etc/nginx/cache/stage levels=1:2 keys_zone=stage:10m max_size=100m inactive=60m use_temp_path=off;
 
 server {
     server_name stage.stephen-cresswell.net;
