Debug stage / live issues

--- a/container-files/etc/nginx/sites-available/live.conf
+++ b/container-files/etc/nginx/sites-available/live.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /etc/nginx/cache/live levels=1:2 keys_zone=live:10m max_size=100m inactive=60m use_temp_path=off;
+#proxy_cache_path /etc/nginx/cache/live levels=1:2 keys_zone=live:10m max_size=100m inactive=60m use_temp_path=off;
 
 server {
     server_name stephen-cresswell.net;
@@ -42,8 +42,8 @@ server {
     }
 
     location / {
-        proxy_cache live;
-        include /etc/nginx/snippets/cache.conf;
+#        proxy_cache live;
+#        include /etc/nginx/snippets/cache.conf;
         include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-live:3000;
     }
