Fix security headers

--- a/container-files/etc/nginx/sites-available/live.conf
+++ b/container-files/etc/nginx/sites-available/live.conf
@@ -43,6 +43,7 @@ server {
 
     location / {
         proxy_cache live;
+        include /etc/nginx/snippets/security.conf;
         include /etc/nginx/snippets/cache.conf;
         include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-live:3000;
