--- a/container-files/etc/nginx/sites-available/stage.conf
+++ b/container-files/etc/nginx/sites-available/stage.conf
@@ -25,6 +25,7 @@ server {
 
     location / {
         proxy_cache stage;
+        include /etc/nginx/snippets/security.conf;
         include /etc/nginx/snippets/cache.conf;
         include /etc/nginx/snippets/proxy.conf;
         proxy_pass http://www-app-stage:3000;
